# ros_openvino_toolkit

./: .clang-format  .gitignore  README.md  skel-track-notes.md
.github/: BEFORE_YOU_START.md  COMMIT_CONVENTION.md  (+3 more)
dynamic_vino_lib/: CMakeLists.txt  package.xml
dynamic_vino_lib/include/dynamic_vino_lib/: args_helper.h  common.h  factory.h  pipeline.h  pipeline_manager.h  pipeline_params.h  slog.h
dynamic_vino_lib/include/dynamic_vino_lib/engines/: engine.h  engine_manager.h
dynamic_vino_lib/include/dynamic_vino_lib/inferences/: age_gender_detection.h  base_filter.h  base_inference.h  base_reidentification.h  emotions_detection.h  face_detection.h  face_reidentification.h  head_pose_detection.h  human_pose_estimation.h  inference_manager.h  landmarks_detection.h  license_plate_detection.h  object_detection.h  object_detection_ssd.h  object_detection_yolov2_voc.h  object_segmentation.h  peak.h  person_attribs_detection.h  person_reidentification.h  vehicle_attribs_detection.h
dynamic_vino_lib/include/dynamic_vino_lib/inputs/: base_input.h  image_input.h  image_topic.h  ip_camera.h  realsense_camera.h  realsense_camera_topic.h  ros_handler.h  standard_camera.h  video_input.h
dynamic_vino_lib/src/: factory.cpp  pipeline.cpp  pipeline_manager.cpp  pipeline_params.cpp
dynamic_vino_lib/src/engines/: engine.cpp  engine_manager.cpp
dynamic_vino_lib/src/inferences/: age_gender_detection.cpp  base_filter.cpp  base_inference.cpp  base_reidentification.cpp  emotions_detection.cpp  face_detection.cpp  face_reidentification.cpp  head_pose_detection.cpp  human_pose_estimation.cpp  landmarks_detection.cpp  license_plate_detection.cpp  object_detection.cpp  object_detection_ssd.cpp  object_detection_yolov2_voc.cpp  object_segmentation.cpp  peak.cpp  person_attribs_detection.cpp  person_reidentification.cpp  vehicle_attribs_detection.cpp
dynamic_vino_lib/src/inputs/: image_input.cpp  image_topic.cpp  ip_camera.cpp  realsense_camera.cpp  realsense_camera_topic.cpp  standard_camera.cpp  video_input.cpp
dynamic_vino_lib/src/models/: age_gender_detection_model.cpp  base_model.cpp  emotion_detection_model.cpp  face_detection_model.cpp  face_reidentification_model.cpp  head_pose_detection_model.cpp  human_pose_estimation_model.cpp  landmarks_detection_model.cpp  license_plate_detection_model.cpp  object_detection_model.cpp  object_detection_ssd_model.cpp  object_detection_yolov2voc_model.cpp  object_segmentation_model.cpp  person_attribs_detection_model.cpp  person_reidentification_model.cpp  vehicle_attribs_detection_model.cpp
dynamic_vino_lib/src/outputs/: .image_window_output.cpp.swp  base_output.cpp  image_window_output.cpp  ros_service_output.cpp  ros_topic_output.cpp  rviz_output.cpp
dynamic_vino_lib/src/services/: frame_processing_object_server.cpp  frame_processing_server.cpp  pipeline_processing_server.cpp
sample/: CMakeLists.txt  package.xml
sample/include/sample/: utility.hpp
sample/src/: image_object_client.cpp  image_object_server.cpp  image_people_client.cpp  image_people_server.cpp  image_reidentification_client.cpp  image_reidentification_server.cpp  image_segmentation_client.cpp  image_segmentation_server.cpp  pipeline_service_client.cpp  pipeline_with_params.cpp  sample_pipeline_object.cpp  sample_pipeline_people.cpp
vino_launch/: CMakeLists.txt  package.xml
vino_launch/launch/: image_human_pose_server.launch  image_object_server.launch  image_object_server_oss.launch  image_people_server.launch  image_people_server_oss.launch  image_reidentification_server_oss.launch  image_segmentation_server.launch  multi_pipeline_service.launch  pipeline_face_reidentification.launch  pipeline_human_pose.launch  pipeline_image.launch  pipeline_image_oss.launch  pipeline_object.launch  pipeline_object_gdb.launch  pipeline_object_myriad.launch  pipeline_object_oss.launch  pipeline_object_oss_topic.launch  pipeline_object_topic.launch  pipeline_object_topic.launch.bak  pipeline_object_yolov5.launch  pipeline_param.launch  pipeline_people.launch  pipeline_people_myriad.launch  pipeline_people_oss.launch  pipeline_pose.launch  pipeline_reidentification.launch  pipeline_reidentification_oss.launch  pipeline_segementation.launch  pipeline_segmentation.launch  pipeline_segmentation.launch.bak  pipeline_segmentation_maskrcnn.launch  pipeline_vehicle_detection.launch  pipeline_video.launch  rviz.launch
vino_launch/param/: .pipeline_reidentification.yaml.swo  .pipeline_reidentification.yaml.swp  image_human_pose_server.yaml  image_object_server.yaml  image_object_server_oss.yaml  image_people_server.yaml  image_people_server_oss.yaml  image_segmentation_server.yaml  multi_pipleine_service_object.yaml  pipeline_face_reidentification.yaml  pipeline_human_pose.yaml  pipeline_image.yaml  pipeline_image_oss.yaml  pipeline_object.yaml  pipeline_object_myriad.yaml  pipeline_object_oss.yaml  pipeline_object_oss_topic.yaml  pipeline_object_tarball.yaml  pipeline_object_topic.yaml  pipeline_object_yolov5.yaml  pipeline_people (copy).yaml  pipeline_people.yaml  pipeline_people_myriad.yaml  pipeline_people_oos.yaml  pipeline_people_open_source.yaml  pipeline_people_oss.yaml  pipeline_people_tarball.yaml  pipeline_pose.yaml  pipeline_reidentification.yaml  pipeline_reidentification_oss.yaml  pipeline_reidentification_server_oss.yaml  pipeline_segmentation.yaml  pipeline_segmentation_maskrcnn.yaml  pipeline_vehicle_detection.yaml  pipeline_video.yaml
vino_launch/param/rviz/: default.rviz
vino_param_lib/: CMakeLists.txt  package.xml
vino_param_lib/include/vino_param_lib/: param_manager.h  slog.h
vino_param_lib/src/: param_manager.cpp
vino_sample/: CMakeLists.txt  package.xml
vino_sample/include/vino_sample/: utility.hpp
vino_sample/src/: image_human_pose_client.cpp  image_human_pose_server.cpp  image_object_client.cpp  image_object_server.cpp  image_people_client.cpp  image_people_server.cpp  image_reidentification_client.cpp  image_reidentification_server.cpp  image_segmentation_client.cpp  image_segmentation_server.cpp  pipeline_service_client.cpp  pipeline_with_params.cpp
(+210 files in other folders)
