<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2018 Intel Corporation
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<package>
  <name>vino_launch</name>
  <version>0.3.0</version>
  <description>This launch project for OpenVINO</description>
  <author email="wei.zhi.liu@intel.com">Weizhi Liu</author>
  <author email="chao1.li@intel.com">Chao Li</author>
  <maintainer email="wei.zhi.liu@intel.com">Weizhi Liu</maintainer>
  <maintainer email="chao1.li@intel.com">Weizhi Li</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>dynamic_vino_lib</build_depend>
  <build_depend>vino_param_lib</build_depend>
  <build_depend>dynamic_vino_sample</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>nodelet</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>dynamic_vino_lib</run_depend>
  <run_depend>vino_param_lib</run_depend>
  <run_depend>dynamic_vino_sample</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>nodelet</run_depend>
</package>
